# ComfyUI_Face_Anon_Simple

./: Face_Anon_Simple_node.py  README.md  __init__.py  node_utils.py  pyproject.toml  workflow.json
src/pipelines/: pipeline_referencenet.py
src/referencenet/: attention.py  referencenet_transformer_2d.py  referencenet_unet_2d_blocks.py  referencenet_unet_2d_condition.py  transformer_2d.py  unet_2d_blocks.py  unet_2d_condition.py
utils/: extractor.py  merger.py
